# ChangeLog for net-fs/autofs
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/ChangeLog,v 1.54 2006/05/20 03:34:57 halcy0n Exp $

*autofs-4.1.3-r5 (20 May 2006)

  20 May 2006; Mark Loeser <halcy0n@gentoo.org>
  +files/autofs-4.1.3-fix-sort-opts.patch, +autofs-4.1.3-r5.ebuild:
  Add patch to to fix sort options; bug #120403

  19 Feb 2006; Joshua Kinard <kumba@gentoo.org> autofs-4.1.3-r4.ebuild:
  Added ~mips to KEYWORDS.

  06 Jul 2005; Robin H. Johnson <robbat2@gentoo.org> -files/auto.home,
  -files/ldap.diff, -files/open_max.diff:
  These FILESDIR items are not used anymore. Bump.

  06 Jun 2005; Markus Rothe <corsair@gentoo.org> autofs-4.1.3-r4.ebuild:
  Stable on ppc64

  17 May 2005; Stephanie Lockwood-Childs <wormo@gentoo.org>
  autofs-4.1.3-r4.ebuild:
  marked stable on ppc, closes bug #92808

  17 Apr 2005; Aron Griffis <agriffis@gentoo.org> autofs-4.1.3-r4.ebuild:
  Stable on alpha amd64 ia64

  12 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  autofs-4.1.3-r4.ebuild:
  Stable on sparc

  11 Apr 2005; Robin H. Johnson <robbat2@gentoo.org> autofs-4.1.3-r4.ebuild:
  Stable on x86.

  09 Apr 2005; Markus Rothe <corsair@gentoo.org> autofs-4.1.3-r2.ebuild:
  Stable on ppc64

  09 Apr 2005; Simon Stelling <blubb@gentoo.org> autofs-4.1.3-r4.ebuild:
  fixed multilib-strict issues

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> autofs-4.1.3-r2.ebuild:
  stable on ia64

  23 Mar 2005; <agriffis@gentoo.org> autofs-4.1.3-r2.ebuild:
  Stable on amd64

  19 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> autofs-4.1.3-r2.ebuild:
  Stable on alpha.

*autofs-4.1.3-r4 (14 Mar 2005)

  14 Mar 2005; Robin H. Johnson <robbat2@gentoo.org> +files/autofs.rc10,
  +files/autofs.rc11, +files/autofs.rc12, files/autofs.rc9,
  +autofs-4.1.3-r4.ebuild:
  Bug #82086 - totally revamp the init script, now supports all daemon
  options. Also cleanup all usage of unsafe sub-shells.
